# agentfactory

./: .cursorrules  .gitignore  .mcp.json  .nxignore  Agent_Factory_Building_Digital_FTEs.md  Agent_Factory_Complete_All_Pages.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  IMPLEMENTATION_PLAN_SUMMARY.md  INSTALL_FRONTEND_PACKAGES.md  LICENSE  README.md  RESEARCH-REPORT.md  TESTING-GUIDE.md  WEBSOCKET_IMPLEMENTATION_COMPLETE.md  add_mcqs_script.ps1  auth-schema.ts  best_offline_search_feature.md  chapter-10-assessment.md  implementation_plan_offline_search.md  issue-133-response.md  nx.json  offline_search_verification.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirement.md  tailwind.config.ts  test.md  tsconfig.base.json  tsconfig.json  ui_customization_offline_search.md  vercel.json
.claude/: settings.json  (+1 more)
Tutor/backend/: .env.example  .gitignore  BACKEND_TEST_COMPLETE.md  COMPLETE_SETUP_GUIDE.md  QUICK_TEST.md  RAG_IMPLEMENTATION.md  README.md  SESSION_MANAGEMENT_IMPLEMENTATION.md  SETUP.md  TESTING_GUIDE.md  WINDOWS_SETUP.md  chat.py  ingestion_log.txt  main.py  pyproject.toml  quick_ingest.py  requirements.txt  setup_windows.bat  test_agent_live.py  test_agent_quick.py  test_all_backend_features.py  test_api_detailed.py  test_api_key.py  test_auth_quick.py  test_chat_api.py  test_http_api.sh  test_websocket.html
Tutor/backend/app/: main.py
Tutor/backend/app/agent/: colearning_agent.py  personality.py  tutor_agent.py
Tutor/backend/app/api/: chat.py  colearn.py  rag.py
Tutor/backend/app/auth/: utils.py
Tutor/backend/app/services/: book_parser.py  embedding_service.py  rag_service.py  vector_store.py
Tutor/backend/app/tools/: teaching_tools.py
Tutor/backend/scripts/: ingest_book.py
Tutor/backend/tests/: conftest.py  test_rag_service.py
Tutor/backend/tests/integration/: test_agent_with_llm.py
apps/panaversity-fs-py/: .env.example  LICENSE  Makefile  alembic.ini  project.json  pyproject.toml  pytest.ini
apps/panaversity-fs-py/docs/: MCP-TOOLS.md  MIGRATION.md
apps/panaversity-fs-py/docs/guide/: 01-quickstart.md  02-architecture.md  03-tools-reference.md  04-codebase-map.md  05-testing.md  06-extending.md  07-operations.md  README.md
apps/panaversity-fs-py/docs/new/: ARCHITECTURE.md  DEPLOYMENT.md  EDGE_CASE_ANALYSIS.md  SECURITY_FIXES.md
apps/panaversity-fs-py/scripts/: README.md  ingest-book.py  migrate_book_source.py  test_auth_integration.py  upload_image.py
apps/panaversity-fs-py/scripts/common/: __init__.py  mcp_client.py
examples/chapter-35-google-adk/: README.md  pyproject.toml
examples/chapter-35-google-adk/evals/: taskmanager_evals.json
examples/chapter-35-google-adk/guardrails/: __init__.py  async_callbacks.py  audit_logging.py  input_validation.py  layered_defense.py  tool_protection.py
examples/chapter-35-google-adk/state/: __init__.py  mcp_integration.py  multi_user_state.py  session_services.py  state_migration.py  stateful_tools.py
examples/chapter-35-google-adk/task_manager/: __init__.py  __main__.py  agent.py  callbacks.py  session.py  tools.py
examples/chapter-35-google-adk/tests/: __init__.py  conftest.py  test_callbacks.py  test_eval_integration.py  test_state.py  test_taskmanager.py  test_workflows.py
examples/chapter-35-google-adk/workflows/: __init__.py  content_pipeline.py  hybrid_workflow.py  parallel_analysis.py  quality_loop.py
panaversity-fs/: .env.example  .gitignore  Dockerfile.prod  Makefile  NOTICE  QUICKSTART.md  README.md  SETUP.md  TESTING.md  pyproject.toml  setup_test_data.py  test_all_tools.py
panaversity-fs/docs/: ARCHITECTURE.md  AUDIT-AND-VERSIONING.md  DEVELOPMENT.md  MCP-TOOLS.md  MIGRATION.md  SETUP.md  TESTING.md
panaversity-fs/docs/new/: ARCHITECTURE.md  DEPLOYMENT.md  EDGE_CASE_ANALYSIS.md  SECURITY_FIXES.md
panaversity-fs/scripts/: README.md  hydrate-book.py  migrate_book_source.py
panaversity-fs/scripts/common/: log_sanitizer.py
panaversity-fs/scripts/hydrate/: downloader.py  manifest.py
panaversity-fs/scripts/ingest/: __init__.py  cli.py  path_mapper.py  source_scanner.py  sync_engine.py
panaversity-fs/src/panaversity_fs/: __init__.py  app.py  audit.py  auth.py  config.py  errors.py  models.py  server.py  storage.py
panaversity-fs/tests/: __init__.py  conftest.py
panaversity-fs/tests/e2e/: test_complete_book_workflow.py
panaversity-fs/tests/edge_cases/: test_production_structure.py
panaversity-fs/tests/integration/: __init__.py  test_conflict_detection.py  test_content_workflows.py  test_streaming_archive.py
panaversity-fs/tests/performance/: __init__.py  test_archive_throughput.py
panaversity-fs/tests/property/: __init__.py  test_invariant_r2_journal.py
panaversity-fs/tests/scripts/: conftest.py  test_path_mapper.py  test_source_scanner.py
panaversity-fs/tests/unit/: test_auth.py  test_content_tools.py  test_delta_build.py  test_enhanced_tools.py  test_new_features.py  test_overlay_content.py  test_registry_bulk_tools.py  test_search_tools.py  test_validate_book.py
rag-agent/: .dockerignore  .env.example  .gitignore  .ingestion_state.json  CHATKIT_SETUP.md  Dockerfile  README.md  SEARCH_STRATEGY.md  TESTING.md  __init__.py  app.py  chatkit_server.py  docker-run.sh  lifespan.py  prompts.py  pyproject.toml  state.py  test_once.py
rag-agent/api/: __init__.py  health.py  search.py
rag-agent/chatkit/: __init__.py
rag-agent/chatkit_store/: __init__.py  cached_postgres_store.py  config.py  context.py  postgres_store.py  s3_attachment_store.py  supabase_attachment_store.py
rag-agent/core/: __init__.py  config.py
rag-agent/models/: __init__.py  document.py  search.py
rag-agent/rag/: __init__.py  search.py  tools.py
rag-agent/rag/ingestion/: __init__.py  chunker.py  crawler.py  embedder.py  parser.py  state.py  uploader.py
rag-agent/scripts/: __init__.py  ingest.py
rag-agent/tests/: __init__.py  test_api.py  test_ingestion_crawler.py  test_models.py  test_rag_search.py  test_tools.py
(+3936 files in other folders)
